D-16351 Reflection work-around was broken